增加了软购、阡陌等源

--- a/pyrsshub/templates/main/feeds.html
+++ b/pyrsshub/templates/main/feeds.html
@@ -385,4 +385,92 @@
 <br>
 <!--item info end-->
 
+<!--item info start-->
+<div class="card text-left">
+  <div class="card-body">
+    <h4 class="card-title">知乎专栏</h4>
+    <h6 class="text-muted">知乎专栏 <a href="https://github.com/hillerliao" target="_blank" class="badge badge-secondary">by hillerliao</a></h6>
+    <p class="card-text">举例：<a href="http://127.0.0.1:5000/zhihu/column/c_1225490937046286336" target="_blank">http://127.0.0.1:5000/zhihu/column/c_1225490937046286336</a></p>
+    <p class="card-text">路由：<code>/zhihu/column/:category</code></p>
+    <p class="card-text">参数：category [必填]</p>
+  </div>
+</div>
+<br>
+<!--item info end-->
+
+<!--item info start-->
+<div class="card text-left">
+  <div class="card-body">
+    <h4 class="card-title">知乎话题</h4>
+    <h6 class="text-muted">知乎话题 <a href="https://github.com/hillerliao" target="_blank" class="badge badge-secondary">by hillerliao</a></h6>
+    <p class="card-text">举例：<a href="http://127.0.0.1:5000/zhihu/topic/20137632" target="_blank">http://127.0.0.1:5000/zhihu/topic/20137632</a></p>
+    <p class="card-text">路由：<code>/zhihu/topic/:category</code></p>
+    <p class="card-text">参数：category [必填]</p>
+  </div>
+</div>
+<br>
+<!--item info end-->
+
+<div class="card text-left">
+  <div class="card-body">
+    <h4 class="card-title">软购拍卖</h4>
+    <h6 class="text-muted">软购拍卖 <a href="https://github.com/hillerliao" target="_blank" class="badge badge-secondary">by hillerliao</a></h6>
+    <p class="card-text">举例：<a href="http://127.0.0.1:5000/apsgo/auctions" target="_blank">http://127.0.0.1:5000/apsgo/auctions</a></p>
+    <p class="card-text">路由：<code>/apsgo/auctions</code></p>
+    <p class="card-text">参数：category [必填]</p>
+  </div>
+</div>
+<br>
+<!--item info end-->
+
+
+<div class="card text-left">
+  <div class="card-body">
+    <h4 class="card-title">CSDN专题</h4>
+    <h6 class="text-muted">CSDN专题 <a href="https://github.com/hillerliao" target="_blank" class="badge badge-secondary">by hillerliao</a></h6>
+    <p class="card-text">举例：<a href="http://127.0.0.1:5000/csdn/nav/ai/cv" target="_blank">http://127.0.0.1:5000/csdn/nav/ai/cv</a></p>
+    <p class="card-text">路由：<code>/csdn/nav/:category/:category2</code></p>
+    <p class="card-text">参数：category [文章分类ai和cv]</p>
+  </div>
+</div>
+<br>
+<!--item info end-->
+
+
+<div class="card text-left">
+  <div class="card-body">
+    <h4 class="card-title">CSDN作者文章</h4>
+    <h6 class="text-muted">CSDN作者文章 <a href="https://github.com/hillerliao" target="_blank" class="badge badge-secondary">by hillerliao</a></h6>
+    <p class="card-text">举例：<a href="http://127.0.0.1:5000/csdn/author/zxb_1222" target="_blank">http://127.0.0.1:5000/csdn/author/zxb_1222</a></p>
+    <p class="card-text">路由：<code>/csdn/author/:category</p>
+    <p class="card-text">参数：category [作者uid]</p>
+  </div>
+</div>
+<br>
+<!--item info end-->
+
+<div class="card text-left">
+  <div class="card-body">
+    <h4 class="card-title">通信世界网</h4>
+    <h6 class="text-muted">通信世界网 <a href="https://github.com/hillerliao" target="_blank" class="badge badge-secondary">by hillerliao</a></h6>
+    <p class="card-text">举例：<a href="http://127.0.0.1:5000/cwwnet" target="_blank">http://127.0.0.1:5000/cwwnet</a></p>
+    <p class="card-text">路由：<code>nonw</p>
+    <p class="card-text">参数：无</p>
+  </div>
+</div>
+<br>
+<!--item info end-->
+
+<div class="card text-left">
+  <div class="card-body">
+    <h4 class="card-title">汽车开发者社区</h4>
+    <h6 class="text-muted">汽车开发者社区-个人文章 <a href="https://github.com/hillerliao" target="_blank" class="badge badge-secondary">by hillerliao</a></h6>
+    <p class="card-text">举例：<a href="http://127.0.0.1:5000/51cto/user/posts/11867250" target="_blank">http://127.0.0.1:5000/51cto/user/posts/11867250</a></p>
+    <p class="card-text">路由：<code>/51cto/userposts/:category</p>
+    <p class="card-text">参数：作者id</p>
+  </div>
+</div>
+<br>
+<!--item info end-->
+
 {% endblock content %}
