--- a/pyrsshub/templates/main/feeds.html
+++ b/pyrsshub/templates/main/feeds.html
@@ -65,6 +65,8 @@
     <h6 class="text-muted">主题内容 <a href="https://github.com/hillerliao" target="_blank" class="badge badge-secondary">by hillerliao</a></h6>
     <p class="card-text">举例：<a href="https://pyrsshub.herokuapp.com/infoq/topic/159" target="_blank">https://pyrsshub.herokuapp.com/infoq/topic/159</a></p>
     <p class="card-text">路由：<code>/infoq/topic/:category</code></p>
+    <p class="card-text">举例：<a href="https://pyrsshub.vercel.app/filter?feed=https://sspai.com/feed&include_title=派早报" target="_blank">https://pyrsshub.vercel.app/filter?feed=https://sspai.com/feed&include_title=征文|派早报</a></p>
+    <p class="card-text">参数：<code>include_title</code> 匹配标题，支持多关键词，用 | 分隔。</p>
   </div>
 </div>
 <br>
